@@ -8,6 +8,7 @@ Key:
 v.0.5dev (ongoing development)
  * Update driver includes and LDFLAGS (fixed glk and bayrad binding error)
  * Modify all drivers to use server/drivers/report.h instead of shared/report.h
+ * Make all drivers using parallel port fail if they cannot get IO permission
 
 v0.5.3
  + lcdexec: notification when called program finishes
